v5/introduction/packages.md
# Packages

* `dotkernel/dot-cache` - Provides caching based on symfony/cache
* `dotkernel/dot-cli` - Build console applications based on laminas-cli
* `dotkernel/dot-controller` - Provides base classes for action based controllers similar to Laminas controller component
* `dotkernel/dot-data-fixtures` - Provides a CLI interface for listing & executing doctrine data fixtures
* `dotkernel/dot-dependency-injection` - Dependency injection component using class attributes
* `dotkernel/dot-errorhandler` - Logging Error Handler for Middleware Applications
* `dotkernel/dot-flashmessenger` - Provides session messages between redirects
* `dotkernel/dot-geoip` - Retrieve information about an IP address based on maxmind/GeoIP2-php
* `dotkernel/dot-helpers` - Helper/Utility classes based on mezzio/mezzio-helpers
* `dotkernel/dot-mail` - Mail component based on laminas-mail
* `dotkernel/dot-navigation` - Allows you to easily define and parse menus inside templates, configuration based approach
* `dotkernel/dot-rbac-guard` - Defines authorization guards that authorize users for accessing certain parts of an application based on various criteria
* `dotkernel/dot-session` - Dotkernel session component extending and customizing laminas-session
* `dotkernel/dot-twigrenderer` - Dotkernel component providing twig extensions and customizations
* `friendsofphp/proxy-manager-lts` - Fork of ocramius/proxy-manager
* `laminas/laminas-component-installer` - Composer plugin for injecting modules and configuration providers into application configuration
* `laminas/laminas-config-aggregator` - Lightweight library for collecting and merging configuration from different sources
* `laminas/laminas-i18n` - Complete translation suite
* `laminas/laminas-math` - Create cryptographically secure pseudo-random numbers and manage big integers
* `mezzio/mezzio` - PSR-15 Middleware Microframework
* `mezzio/mezzio-authorization-rbac` - mezzio authorization rbac adapter for laminas/laminas-permissions-rbac
* `mezzio/mezzio-cors` - CORS component for Mezzio and other PSR-15 middleware runners
* `mezzio/mezzio-fastroute` - FastRoute integration for Mezzio
* `ramsey/uuid-doctrine` - Use ramsey/uuid as a Doctrine field type
* `roave/psr-container-doctrine` - Doctrine Factories for PSR-11 Containers
